--- a/global.css
+++ b/global.css
@@ -1,11 +1,22 @@
-th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
-#converted  { color: red; font-weight: bold; font-size:large;          }     /* Calculated values in bold */
-input       { text-align: right;  border: none; font-size:large;       }     /* Align input to the right  */
-textarea    { border: outset; border-color: white; font-size:large;       }                        
-table       { border: inset; border-color: white; }
-#result     { border-color: red; }
+html *
+{
+   font-size: large; 
+   /* The !important ensures that nothing can override what you've set in this style (unless it is also important). */
+   font-family: Arial;
+}
+
+h1            { text-align: center; font-size: x-large; }
+th, td        { vertical-align: top; text-align: right; }   
+#converted  * { color: white; background-color: black; }   
+
+/* #converted table { border-collapse:collapse; } */
+#converted table, td, th { border:1px solid white; }
+input        { text-align: right;  border: none;       }     /* Align input to the right  */
+textarea     { border: outset; border-color: white;       }                        
+table        { border: inset; border-color: white; }
+table.center { margin-left:auto; margin-right:auto; }
+#result      { border-color: red; }
 body
 {
  background-color:#b0c4de;  /* blue */
- font-size:large;
 }
