--- a/global.css
+++ b/global.css
@@ -7,10 +7,13 @@ html *
 
 h1            { text-align: center; font-size: x-large; }
 th, td        { vertical-align: top; text-align: right; }   
-#converted  * { color: white; background-color: black; }   
+/* #finaltable  * { color: white; background-color: black; }   */
 
-/* #converted table { border-collapse:collapse; } */
-#converted table, td, th { border:1px solid white; }
+/* #finaltable table { border-collapse:collapse; } */
+/* #finaltable table, td { border:1px solid white; } */
+#finaltable:hover td { background-color: blue; } 
+tr:nth-child(odd)    { background-color:#eee; }
+tr:nth-child(even)    { background-color:#00FF66; }
 input        { text-align: right;  border: none;       }     /* Align input to the right  */
 textarea     { border: outset; border-color: white;       }                        
 table        { border: inset; border-color: white; }
