--- a/style.css
+++ b/style.css
@@ -11,34 +11,40 @@ header {
   width: 100%;
   height: 90px;
   text-align: center;
-  position: fixed;
+  position: absolute;
   top: 0px;
   left: 0px;
   right: 0px; }
 
 table {
   margin: auto;
+  padding: 10px;
+  text-align: center; }
+
+table td {
   padding: 10px; }
 
 textarea {
-  width: 300px;
-  height: 100px; }
+  width: 400px;
+  height: 150px; }
 
-.central-content {
-  text-align: center; }
-
+/*.central-content {
+	margin-top: 12%;
+}*/
 .content-up {
   display: inline-block;
-  margin-top: 10%;
-  width: 50%;
-  text-align: center; }
+  float: center;
+  width: 40%;
+  text-align: center;
+  margin-top: 8%; }
 
 .content-down {
   display: inline-block;
-  position: absolute;
-  bottom: 0px; }
+  float: center;
+  margin-top: 5%;
+  margin-bottom: 100px; }
 
-.output, tr, td {
+.output tr td {
   border: 1px solid black; }
 
 .output tr:first-child {
@@ -56,7 +62,7 @@ button {
   border: none; }
 
 footer {
-  display: block;
+  display: inline-block;
   font-size: 15px;
   position: fixed;
   bottom: 0px;
@@ -77,7 +83,7 @@ footer {
 
 .footer ul li {
   display: inline-block;
-  margin: 30px; }
+  margin: 20px; }
 
 #description {
   display: block;
