--- a/style.scss
+++ b/style.scss
@@ -25,18 +25,10 @@ table {
 	text-align: center;
 }
 
-table td {
-	padding: 10px;
-}
-
 textarea {
 	width: 400px;
 	height: 150px;
 }
-
-/*.central-content {
-	margin-top: 12%;
-}*/
 
 .content-up {
 	display: inline-block;
@@ -53,14 +45,23 @@ textarea {
 	margin-bottom: 100px;
 }
 
-.output tr td {
+.output tr {
 	border: 1px solid black;
+}
+
+.output td {
+	border: 1px solid black;
+	padding: 10px;
 }
 
 .output tr:first-child {
 	background-color: #666633;
 	color: white;
 	font-weight: bold;
+}
+
+tr.error {
+	background-color: red;
 }
 
 button {
