--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,18 +6,10 @@
 
      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.js"></script>
      <script type="text/javascript" src="csv.js"></script>
      <script type="text/javascript" src="main.js"></script>
      <script type="text/html" id='fillTable'>
-       <table id="result" class="center">
-         <% _.each(items, function(name) { %>
-           <tr class="<%= name.rowClass %>">
-             <% _.each(name.value, function(cell) { %>
-               <td><%= cell %></td>
-             <% }); %>
-           </tr>
-         <% }); %>
-       </table>
      </script>
   </head>
 
@@ -33,7 +25,7 @@
         </p>
       </div>
       <div class="form">
-        <form id="inputform" action="/csv" method="post">
+        <form id="inputform">
           <table>
             <tr>
               <td><textarea name="textareaContent" id="original"></textarea></td> 
