añadidos y funcionando botones de selección de ejemplos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,14 @@
         <form id="inputform">
           <table>
             <tr>
+              <div class="examplesbuttons">
+                <button type="button" id="input1"><b>input1</b></button>
+                <button type="button" id="input2"><b>input2</b></button>
+                <button type="button" id="input3"><b>input3</b></button>
+                <button type="button" id="input4"><b>input4</b></button>
+              </div>
+            </tr>
+            <tr>
               <td><textarea name="textareaContent" id="original"></textarea></td> 
             </tr>
           </table>
