cambios en views/index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,8 +20,13 @@
 
     <div class="content-up">
       <div id="description">
-        <p>Write a CSV string in the text area. After clicking the button, the 
-        application will output a table with the specified data.
+        <p>
+          Write a CSV string in the text area. After clicking the button, the 
+          application will output a table with the specified data.
+        </p>
+        <p>
+          You will be available to drag and drop a file in the textarea to dump
+          the content to it.
         </p>
       </div>
       <div class="form">
