modificando mensaje en views/index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         </p>
         <p>
           You will be available to drag and drop a file in the textarea to dump
-          the content to it.
+          the content to it as well.
         </p>
       </div>
       <div class="form">
