añadido botón de selección de ficheros <input type=file/>

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,7 @@
           </table>
           <button id="sendbutton" type="submit"><b>Parse</b></button><br>
         </form>
+        <input type="file" class="upload" id="uploadfile"></input>
       </div>
 
       <div class="content-down">
