cambios en views/index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
           <table>
             <tr>
               <div class="examplesbuttons">
-                <button type="button" id="input1"><b>input1</b></button>
+                <button type="button" id="input"><b>input1</b></button>
                 <button type="button" id="input2"><b>input2</b></button>
                 <button type="button" id="input3"><b>input3</b></button>
                 <button type="button" id="input4"><b>input4</b></button>
