aislando el cálculo de la tabla como un módulo node.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,6 @@
      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.js"></script>
-     <script type="text/javascript" src="csv.js"></script>
      <script type="text/javascript" src="main.js"></script>
      <script type="text/html" id='fillTable'>
      </script>
@@ -34,7 +33,7 @@
           <table>
             <tr>
               <div class="examplesbuttons">
-                <button type="button" id="input"><b>input1</b></button>
+                <button type="button" id="input1"><b>input1</b></button>
                 <button type="button" id="input2"><b>input2</b></button>
                 <button type="button" id="input3"><b>input3</b></button>
                 <button type="button" id="input4"><b>input4</b></button>
@@ -56,7 +55,7 @@
 
     <footer class="footer">
       <ul>
-        <li><a target="_blank" href=""><b>Author</b></a></li>
+        <li><a target="_blank" href="https://github.com/tewatenerife"><b>Author</b></a></li>
         <li><a target="_blank" href="https://github.com/tewatenerife/Comma-Separated-Values/"><b>Github</b></a></li>
         <li><a target="_blank" href=""><b>Tests</b></a></li>
       </ul>
