--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,12 @@
   <head>
      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
      <title>CSV Analyzer</title>
-     <link href="style.css" rel="stylesheet" type="text/css">
+     <link href="../public/css/style.css" rel="stylesheet" type="text/css">
 
      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.js"></script>
-     <script type="text/javascript" src="main.js"></script>
+     <script type="text/javascript" src="../public/js/main.js"></script>
      <script type="text/html" id='fillTable'>
      </script>
   </head>
