funcionando el guardado de documentos con MongoDB

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,10 +40,12 @@
               </div>
             </tr>
             <tr>
-              <td><textarea name="textareaContent" id="original"></textarea></td> 
+              <td><textarea name="inputContent" id="original"></textarea></td> 
             </tr>
           </table>
-          <button id="sendbutton" type="submit"><b>Parse</b></button><br>
+          <input type="text" id="inputName"></input>
+          <button type="button" id="savebutton"><b>Save</b></button>
+          <button type="submit" id="sendbutton"><b>Parse</b></button><br>
         </form>
         <input type="file" class="upload" id="uploadfile"></input>
       </div>
