añadidos los botones de funcionamiento dinámico

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
           application will output a table with the specified data.
         </p>
         <p>
-          You will be available to drag and drop a file in the textarea to dump
+          You will be able to drag and drop a file in the textarea to dump
           the content to it as well.
         </p>
       </div>
@@ -33,17 +33,19 @@
           <table>
             <tr>
               <div class="examplesbuttons">
+              <!--
                 <button type="button" id="input1"><b>input1</b></button>
                 <button type="button" id="input2"><b>input2</b></button>
                 <button type="button" id="input3"><b>input3</b></button>
                 <button type="button" id="input4"><b>input4</b></button>
+              -->
               </div>
             </tr>
             <tr>
               <td><textarea name="inputContent" id="original"></textarea></td> 
             </tr>
           </table>
-          <input type="text" id="inputName"></input>
+          <input type="text" id="inputName" placeholder="type a name to save..."></input>
           <button type="button" id="savebutton"><b>Save</b></button>
           <button type="submit" id="sendbutton"><b>Parse</b></button><br>
         </form>
